Make object iteration work,  and add examples

--- a/examples.html
+++ b/examples.html
@@ -6,10 +6,21 @@
 		<script src="repeatInside.js"></script>
 	</head>
 	<body ng-app="myApp" ng-controller="myController">
+		<h2>Iterating over a list</h2>
 		<dl repeat-inside="word in dict">
 			<dt>{{word.name}}</dt>
 			<dd>{{word.description}} <a href="#" ng-click="removeAtIndex(index)">remove</a></dd>
 		</dl>
+		<p>
+			<label>add framework <input ng-model="framework"></label> <label>description: <input ng-model="frameworkdescription"></label> <button ng-click="dict.push({name:framework, description:frameworkdescription})">go!</button>
+		</p>
+		<h2>Iterating over an object</h2>
+		<div style="border:2px ridge black;background-color:#DDD;padding:20px;">
+			<h3>Price List</h3>
+			<div repeat-inside="(product, price) in prices">
+				<strong ng-bind="product" style="width:100px;display:inline-block;"></strong> {{price | currency}}<br>
+			</div>
+		</div>
 	</body>
 	<script>
 	myApp = angular.module("myApp", ["bigblind"])
@@ -24,6 +35,11 @@
 			$scope.dict.splice(0,1);
 			console.log("----------------");
 			console.log($scope.dict);
+		}
+		$scope.prices = {
+			"bread": 1.95,
+			"milk": 1.92,
+			"angularjs": 0.00,
 		}
 	}
 	</script>
