--- a/examples.html
+++ b/examples.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>repeatInside test</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.15/angular.min.js"></script>
 		<script src="repeatInside.js"></script>
 	</head>
 	<body ng-app="myApp" ng-controller="myController">
@@ -23,25 +23,26 @@
 		</div>
 	</body>
 	<script>
-	myApp = angular.module("myApp", ["bigblind"])
+	myApp = angular.module("myApp", ["bigblind"]);
 	
-	myController = function($scope){
+	myApp.controller("myController",["$scope", function($scope){
 		$scope.dict = [
 			{name:"angular", description:"hero javascript framework"},
 			{name:"jQuery", description:"DOM made easy."}
-		];
+        ]
+
 		
 		$scope.removeAtIndex = function(index){
 			$scope.dict.splice(0,1);
 			console.log("----------------");
 			console.log($scope.dict);
-		}
+		};
 		$scope.prices = {
 			"bread": 1.95,
 			"milk": 1.92,
 			"angularjs": 0.00,
-		}
-	}
+		};
+	}]);
 	</script>
 
 </html>
